fix(AccountManagement): Force color since importing custom theme breaks the whole page

--- a/src/app/account-management/account-management.component.scss
+++ b/src/app/account-management/account-management.component.scss
@@ -1,3 +1,3 @@
 .table-hover tbody tr:hover td {
-  background: $taliesin-blue-light;
+  background: #94c2db;
 }
